# quickbooks_connector

./: README.md  pyproject.toml
quickbooks_connector/: api.py  hooks.py  install.py  qb_customer_hooks.py  qb_invoice_hooks.py  qb_payment_hooks.py  qb_purchase_hooks.py
quickbooks_connector/fixtures/: custom_fields.json
quickbooks_connector/public/css/: quickbooks_connector.css
quickbooks_connector/public/js/: purchase_invoice.js  purchase_invoice_list.js  quickbooks_setting.js  sales_invoice.js  sales_invoice_list.js
quickbooks_connector/quickbooks_connector/doctype/quickbooks_setting/: quickbooks_setting.js  quickbooks_setting.json  quickbooks_setting.py  test_quickbooks_setting.py
quickbooks_connector/quickbooks_connector/doctype/quickbooks_sync_log/: quickbooks_sync_log.js  quickbooks_sync_log.json  quickbooks_sync_log.py  test_quickbooks_sync_log.py
