[project]
name = "quickbooks_connector"
authors = [
    { name = "Zikpro Technologies", email = "shoaibshah1255@gmail.com"}
]
description = "Seamlessly integrate QuickBooks Online with ERPNext. Sync customers, suppliers, items, invoices and payments with UK VAT support."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
   # "frappe>=15.0.0,<16.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
frappe = ">=15.0.0,<17.0.0"